--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://brunocsoares.github.io/Calculadora",
+  "homepage": "https://brunocsoares.github.io/Projeto_Calculadora",
   "name": "calculadora",
   "private": true,
   "version": "0.0.0",
